style: installing foodics fonts

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "Arabic Helvetica";
+
+    src: url("./assets/fonts/HelveticaNeueLTArabic-Light.ttf");
+    font-style: normal;
+    font-weight: 300;
+}
+@font-face {
+    font-family: "Arabic Helvetica";
+
+    src: url("./assets/fonts/HelveticaNeueLTArabic-Roman.ttf");
+    font-style: normal;
+    font-weight: 500;
+}
+@font-face {
+    font-family: "Arabic Helvetica";
+
+    src: url("./assets/fonts/HelveticaNeueLTArabic-Bold.ttf");
+    font-style: normal;
+    font-weight: 700;
+}
